[package]
name = "observer_ward"
version = "2022.3.13"
authors = ["Kali-Team <root@kali-team.cn>"]
edition = "2021"
description = "Cross platform community web fingerprint identification tool."
license = "MIT"
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]

[workspace]
members = ["."]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
once_cell = "1.17.2"
argh = "0.1.12"
url = { version = "2.4.1", features = ["serde"] }
csv = "1.3.0"
dirs = "5.0.1"
tokio = { version = "1.33.0", default-features = false }
prettytable-rs = "^0.10"
textwrap = "0.16"
log = "0.4.20"
futures = { version = "0.3", features = ["compat"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
reqwest = { version = "0.11.22", features = ["socks", "blocking", "gzip"] }
crossterm = "0.27"
observer_ward_what_web = { path = "what_web", package = "what_web" }
observer_ward_what_server = { path = "what_server", package = "what_server" }
openssl = { version = "0.10", features = ["vendored"] }
env_logger = "0.10.0"
actix-web-httpauth = "0.8.1"
zip = { version = "0.6" }
actix-web = { version = "4.4.0", features = ["openssl"] }
[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "0.5.0"
[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"

[profile.dev.package."*"]
opt-level = 3
[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
