[workspace.package]
#name = "observer_ward"
version = "2022.3.13"
authors = ["Kali-Team <root@kali-team.cn>"]
edition = "2021"
description = "Cross platform community web fingerprint identification tool."
license = "MIT"
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]

[workspace]
members = ["observer_ward", "what_web", "what_server"]
exclude = ["manager"]
resolver = "2"
default-members = ["observer_ward"]
[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"



[profile.dev.package."*"]
opt-level = 3
[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
