[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
base64 = "0.22.1"
#临时使用，最好将正则表达式迁移到支持regex库，减少反向引用
fancy-regex = { version = "0.14.0", default-features = false, features = [
  "std",
  "unicode",
  "perf",
] }
jsonpath-rust = "0.7.5"
rustc_lexer = "0.1.0"
serde_json = "1"
#git = "https://github.com/emo-crab/slinger",
slinger = { version = "0.1.14", features = [
  "serde",
  "cookie",
  "tls",
  "charset",
  "gzip",
] }
md-5 = "0.10.6"
tl = "0.7.8"
mime = "0.3.17"
thiserror = "2"
log = "0.4.25"
