[package]
name = "engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
base64 = "0.22.1"
#临时使用，最好将正则表达式迁移到支持regex库，减少反向引用
fancy-regex = { version = "0.16.2", default-features = false, features = [
    "std",
    "unicode",
    "perf",
] }
regex = { version = "1.12.2", default-features = false, features = [
    "std",
    "unicode",
    "perf",
] }
jsonpath-rust = "1.0.4"
rustc_lexer = "0.1.0"
serde_json = "1"
#git = "https://github.com/emo-crab/slinger",
slinger = { version = "0.2.10", features = [
    "serde",
    "cookie",
    "tls",
    "charset",
    "gzip",
    "schema",
    "rustls",
    "http2"
] }
slinger-mitm = { version = "0.0.1", optional = true }
md-5 = "0.10.6"
tl = "0.7.8"
mime = "0.3.17"
thiserror = "2"
log = "0.4.28"
once_cell = "1.21.1"
schemars = { version = "1.0.4", optional = true, features = ["chrono04"] }
[features]
mcp = ["schemars"]
mitm = ["slinger-mitm"]