[package]
name = "engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
base64 = "0.22.1"
#临时使用，最好将正则表达式迁移到支持regex库，减少反向引用
fancy-regex = { version = "0.17.0", default-features = false, features = [
    "std",
    "unicode",
    "perf",
] }
regex = { version = "1.12.3", default-features = false, features = [
    "std",
    "unicode",
    "perf",
] }
jsonpath-rust = "1.0.4"
rustc_lexer = "0.1.0"
serde_json = "1"
#git = "https://github.com/emo-crab/slinger",
slinger = { version = "0.2.14", features = [
    "serde",
    "cookie",
    "tls",
    "charset",
    "gzip",
    "schema",
    "rustls",
    "http2"
] }
slinger-mitm = { version = "0.0.5", optional = true }
md-5 = "0.11.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
hex = "0.4.3"
cel = { version = "0.13.0", features = ["regex"] }
tl = "0.7.8"
mime = "0.3.17"
thiserror = "2"
log = "0.4.29"
once_cell = "1.21.4"
aho-corasick = "1.1"
rayon = "1.9"
schemars = { version = "1.2.1", optional = true, features = ["chrono04"] }
rustpython-vm = { version = "0.5.0", default-features = false, features = ["compiler"], optional = true }
[features]
mcp = ["schemars"]
mitm = ["slinger-mitm"]
code = ["rustpython-vm"]
