[package]
name = "manager"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_8"] }
