[package]
name = "nuclei_rs"
version = "0.1.0"
edition = "2018"
authors = ["Kali-Team <root@kali-team.cn>"]
description = "pure rust language implementation nuclei."
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
walkdir = "2"
serde_derive = "1.0"
reqwest = { version = "0.10", features = ["cookies", "socks", "blocking", "gzip"] }
regex = { version = "1.3.1", default-features = false, features = ["std", "unicode"] }
mime = "0.3.16"
md-5 = "0.9.1"
tera = "1"
encoding_rs = "0.8.28"
lazy_static = "1.4.0"
cookie = "0.15.1"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.4"
httparse = "1.5.1"
url = { version = "2.1.1", features = ["serde"] }