[package]
name = "observer_ward"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"
repository = "https://github.com/emo-crab/observer_ward"
description = "Web application and service fingerprint identification tool"
authors = ["Kali-Team <root@kali-team.cn>"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
argh = "0.1.12"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "5.0.1"
threadpool = "1.8.1"
thiserror = "1"
env_logger = { version = "0.11.5", default-features = false, features = [
  "auto-color",
] }
log = "0.4.22"
console = "0.15.8"
rustc_lexer = "0.1.0"
zip = { version = "2.1.6", default-features = false, features = ["deflate"] }
actix-web-httpauth = "0.8.1"
actix-web = { version = "4.6.0", default-features = false, features = [
  "macros",
  "compress-gzip",
  "openssl",
] }
openssl = { version = "0.10", features = ["vendored"] }
[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "0.5.0"

[package.metadata.deb]
maintainer = "Kali-Team <root@kali-team.cn>"
copyright = "2024, Kali-Team <root@kali-team.cn>"
extended-description = """Web application and service fingerprint identification tool"""
depends = "$auto"
section = "rust"
priority = "optional"
assets = [["target/release/observer_ward", "usr/bin/", "755"]]
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/observer_ward", dest = "/usr/bin/observer_ward", mode = "0755" },
]

[[bin]]
name = "observer_ward"
path = "src/main.rs"
