[package]
name = "observer_ward"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"
repository = "https://github.com/emo-crab/observer_ward"
description = "Web application and service fingerprint identification tool"
authors = ["Kali-Team <root@kali-team.cn>"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
argh = "0.1.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "6.0.0"
futures = { version = "0.3.31" }
uuid = { version = "1.11.0", features = ["v4"] }
thiserror = "2"
env_logger = { version = "0.11.6", default-features = false, features = [
    "auto-color",
] }
log = "0.4.26"
console = "0.15.10"
zip = { version = "2.3.0", default-features = false, features = ["deflate"] }
actix-web-httpauth = "0.8.1"
actix-web = { version = "4.9.0", default-features = false, features = [
    "macros",
    "compress-gzip",
] }
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"], default-features = false }
[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "0.5.0"

[package.metadata.deb]
maintainer = "Kali-Team <root@kali-team.cn>"
copyright = "2024, Kali-Team <root@kali-team.cn>"
extended-description = """Web application and service fingerprint identification tool"""
depends = "$auto"
section = "rust"
priority = "optional"
assets = [["target/release/observer_ward", "usr/bin/", "755"]]
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/observer_ward", dest = "/usr/bin/observer_ward", mode = "0755" },
]

[[bin]]
name = "observer_ward"
path = "src/main.rs"
