[package]
name = "observer_ward"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"
repository = "https://github.com/emo-crab/observer_ward"
description = "Web application and service fingerprint identification tool"
authors = ["Kali-Team <root@kali-team.cn>"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
rustc-hash = "2.1"
rmcp = { version = "0.8.3", features = [
    "server",
    "transport-io"
], optional = true }
schemars = { version = "1.0.4", optional = true, features = ["chrono04", "url2"] }
argh = "0.1.13"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "6.0.0"
futures = { version = "0.3.31" }
uuid = { version = "1.18.1", features = ["v4"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter", "fmt"] }
log = "0.4.28"
console = "0.16.1"
async-trait = { version = "0.1", optional = true }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
actix-web-httpauth = "0.8.1"
actix-web = { version = "4.11.0", default-features = false, features = [
    "macros",
    "compress-gzip",
] }
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"], default-features = false }
moka = { version = "0.12.11", features = ["future"] }
[features]
default = ["mcp", "mitm"]
mcp = ["rmcp", "engine/mcp", "schemars"]
mitm = ["engine/mitm", "async-trait"]
[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "0.5.0"

[package.metadata.deb]
maintainer = "Kali-Team <root@kali-team.cn>"
copyright = "2024, Kali-Team <root@kali-team.cn>"
extended-description = """Web application and service fingerprint identification tool"""
depends = "$auto"
section = "rust"
priority = "optional"
assets = [["target/release/observer_ward", "usr/bin/", "755"]]
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/observer_ward", dest = "/usr/bin/observer_ward", mode = "0755" },
]

[[bin]]
name = "observer_ward"
path = "src/main.rs"