[package]
name = "observer_ward_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "observer_ward_py"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.24.1"
features = ["extension-module"]

[dependencies]
engine = { path = "../engine" }
pythonize = "0.24.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1"
slinger = { version = "0.2.3", features = ["serde", "cookie", "tls", "charset", "gzip"] }
