[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "observer_ward"
version = "0.1.0"
description = "Python bindings for observer-ward"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "../LICENSE" }
keywords = ["web", "fingerprint", "technology", "detection"]
authors = [
    { name = "Observer Ward Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/emo-crab/observer_ward"
"Bug Tracker" = "https://github.com/emo-crab/observer_ward/issues"

[tool.maturin]
python-source = "python"
module-name = "observer_ward.observer_ward_py"
features = ["pyo3/extension-module"]
