[package]
name = "target_input"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }
itertools = "0.9.0"
rand = "0.7.3"
cidr-utils = "0.5.1"