[package]
name = "what_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
futures = "0.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
regex = { version = "1.10.4", default-features = false, features = [
    "std",
    "unicode",
] }
tokio = { version = "1.37.0", default-features = false }
observer_ward_what_web = { path = "../what_web", package = "what_web" }