[package]
name = "what_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
encoding_rs = "0.8.34"
regex = { version = "1.10.4", default-features = false, features = [
    "std",
    "unicode",
] }
crossterm = "0.27"
mime = "0.3.17"
md-5 = "0.10.6"
base64 = "0.22.1"
cached = { version = "0.51.4", features = ["async"] }
anyhow = "1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.4", features = [
    "native-tls",
    "socks",
    "blocking",
    "gzip",
    "cookies",
    "json",
] }
futures = { version = "0.3", features = ["compat"] }
url = { version = "2.1.1", features = ["serde"] }
tokio = { version = "1.38.0", default-features = false, features = [
    "process",
    "macros",
] }
select = "0.6.0"